[project]
name = "lesson11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fhir-resources==6.1.0",
    "fhirpathpy>=2.1.0",
    "pydantic<2.0",
    "requests>=2.20.0,<3.0.0",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
]
